<resources>
    <string name="app_name">ASSU_FE_app</string>
    <string name="home">홈</string>
    <string name="location">내 주변</string>
    <string name="dashboard">대시보드</string>
    <string name="chatting">채팅</string>
    <string name="myPage">계정관리</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup_welcome_format">%1$s님\n환영합니다!</string>
    <string name="school_account_text">%1$s 학생이시군요!\n학번과 비밀번호를\n입력해주세요!</string>
    <string name="partner_location">주변 매장</string>
    <string name="admin_location">주변 매장</string>
    <string-array name="suggest_target">
        <item>총학생회</item>
        <item>단과대 학생회</item>
        <item>과 학생회</item>
    </string-array>
    <string name="discount_percent">%1$d%%</string>
</resources>